--- a/ham/first_diy_receiver/index.html
+++ b/ham/first_diy_receiver/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" href="https://futurelizard205.github.io/assets/css/styles.css">
+	<title>First diy receiver</title>
 <head>
 
 <body class="body">
@@ -13,7 +14,8 @@
 <div class="content">
     <div class="left">
         Here's the story of how I made my first radio receiver, in the summer of 2022, being 17 years old.
-	I was interested
+	I essentially built the awesome regenerative receiver designed by DX Explorer: <a href="https://dxexplorer.com/sputnik-regenerative-receiver-v1-0/">Sputnik Regenerative Receiver v1.0</a>. I cut as many components from it as possible to make it easy and quick to build. Doing this sort of bakfired on me, you'll see why later.
+	<p> ----- Under development ----- </p>
     </div>
 
     <div class="right">
