--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="assets/css/styles.css">
+	<link rel="stylesheet" href="assets/css/styles.css">
+	<title>FutureLizard205</title>
 <head>
 <body class="body">
 
@@ -17,7 +18,7 @@
 
     <div class="right">
         Hello World!
-        This is just a test.
+	<a href="https://futurelizard205.github.io/ham">Ham articles</a>
     </div>
 </div>
 
